create a product detile component, login page and fix some bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.c-checkbox {
+.c-checkbox, .c-radio {
   display: none;
+}
+
+.product-detile {
+  height: calc(100vh - 5vh);
 }
