--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,10 @@
   height: calc(100vh - 10vh);
 }
 
+.cpsm-width {
+  width: calc(100% - 2%);
+}
+
 * { -webkit-tap-highlight-color: rgba(0,0,0,0); }
 
 .blocker{
